--- a/資料結構/1018.md
+++ b/資料結構/1018.md
@@ -19,6 +19,7 @@ int main (void)
 	
  } 
 ```
+### 費式數列
 ```
 #include "stdio.h"
 #include "stdlib.h"
@@ -40,6 +41,7 @@ int main (void)
 	return 0;
 }
 ```
+### 分別顯示0!1!2!3!4!5!6!7!8!9!
 ```
 #include "stdio.h"
 #include "stdlib.h"
@@ -57,6 +59,7 @@ int main (void){
 	return 0;
 }
 ```
+### 遞迴
 ```
 int tfact (int);
 
@@ -77,4 +80,7 @@ int tfact(int i){
 	if (i==0 ) return 1;
 	else return i*tfact(i-1);
 }
+```
+```
+tfact(n)=n!
 ```
