--- a/資料結構/1018.md
+++ b/資料結構/1018.md
@@ -82,5 +82,10 @@ int tfact(int i){
 }
 ```
 ```
-tfact(n)=n!
+tfact(5)=5*tfact(4)
+	=5*4*tfact(3)
+	=5*4*3*tfact(2)
+	=5*4*3*2*tfact(1)
+	=5*4*3*2*1*tfact(0)
+	=5*4*3*2*1*1
 ```
