--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -1,3 +1,7 @@
 ### Table join
 ```
+SELECT A1.Region_Name Region, SUM(A2.Sales) SALES
+FROM geography A1, store_information_1 A2
+WHERE A1.store_name = A2.Store_Name
+GROUP BY A1.Region_Name;
 ```
