--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -1,4 +1,5 @@
-### Table join
+## Table join
+### where
 ```
 SELECT A1.Region_Name Region, SUM(A2.Sales) SALES
 FROM geography A1, store_information_1 A2
