--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -7,4 +7,11 @@ WHERE A1.store_name = A2.Store_Name
 GROUP BY A1.Region_Name;
 ```
 ```
+SELECT A1.Region_Name Region, SUM(A2.Sales) SALES, A1.store_name  /The logic answer are ok on this case due to where./
+FROM geography A1, store_information_1 A2
+WHERE A1.store_name = A2.Store_Name
+GROUP BY A1.Region_Name
+```
+```
+
 ```
