--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -13,5 +13,8 @@ WHERE A1.store_name = A2.Store_Name
 GROUP BY A1.Region_Name
 ```
 ```
-
+SELECT A1.Region_Name Region, SUM(A2.Sales) SALES, A1.store_name
+FROM geography A1, store_information_1 A2
+WHERE A1.store_name = A2.Store_Name
+GROUP BY A1.Region_Name, A1.store_name
 ```
