--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -18,3 +18,9 @@ FROM geography A1, store_information_1 A2
 WHERE A1.store_name = A2.Store_Name
 GROUP BY A1.Region_Name, A1.store_name
 ```
+```
+SELECT A1.Region_Name Region, SUM(A2.Sales) SALES, A1.store_name
+FROM geography A1, store_information_1 A2
+WHERE (A1.store_name = A2.Store_Name) AND (A1.Region_Name LIKE "%%")
+GROUP BY A1.Region_Name, A1.store_name;
+```
