--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -21,6 +21,6 @@ GROUP BY A1.Region_Name, A1.store_name
 ```
 SELECT A1.Region_Name Region, SUM(A2.Sales) SALES, A1.store_name
 FROM geography A1, store_information_1 A2
-WHERE (A1.store_name = A2.Store_Name) AND (A1.Region_Name LIKE "%%")
+WHERE (A1.store_name = A2.Store_Name) AND (A1.Region_Name LIKE "%w%")
 GROUP BY A1.Region_Name, A1.store_name;
 ```
