--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -24,3 +24,4 @@ FROM geography A1, store_information_1 A2
 WHERE (A1.store_name = A2.Store_Name) AND (A1.Region_Name LIKE "%w%")
 GROUP BY A1.Region_Name, A1.store_name;
 ```
+### inner join
