--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -25,3 +25,9 @@ WHERE (A1.store_name = A2.Store_Name) AND (A1.Region_Name LIKE "%w%")
 GROUP BY A1.Region_Name, A1.store_name;
 ```
 ### inner join
+```
+SELECT A1.Region_Name, A1.store_name, A0.Sales
+FROM geography A1
+INNER JOIN store_information A0
+ON A1.store_name = A0.Store_Name
+```
