--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -31,3 +31,9 @@ FROM geography A1
 INNER JOIN store_information A0
 ON A1.store_name = A0.Store_Name
 ```
+```
+SELECT A1.Region_Name, A1.store_name, A3.Sales
+FROM geography A1
+INNER JOIN store_information_1 A3
+ON A1.store_name = A3.Store_Name
+```
