--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -37,3 +37,16 @@ FROM geography A1
 INNER JOIN store_information_1 A3
 ON A1.store_name = A3.Store_Name
 ```
+```
+SELECT A1.Region_Name Region, SUM(A2.Sales) Sales
+FROM geography A1
+INNER JOIN store_information_1 A2
+ON A1.store_name = A2.Store_Name
+GROUP BY A1.Region_Name;
+```
+### left outer join
+```
+```
+### right outer join
+```
+```
