--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -46,7 +46,15 @@ GROUP BY A1.Region_Name;
 ```
 ### left outer join
 ```
+SELECT A1.Region_Name, A1.store_name, A5.Store_Name, A5.Sales
+FROM geography A1
+LEFT JOIN store_information A5
+ON A1.store_name = A5.Store_Name
 ```
 ### right outer join
 ```
+SELECT A1.Region_Name, A1.store_name, A5.Store_Name, A5.Sales
+FROM geography A1
+RIGHT JOIN store_information A5
+ON A1.store_name = A5.Store_Name
 ```
