--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -58,3 +58,22 @@ FROM geography A1
 RIGHT JOIN store_information A5
 ON A1.store_name = A5.Store_Name
 ```
+### FULL outer join
+```
+SELECT A1.Region_Name, A1.store_name, A5.Store_Name, A5.Sales
+FROM geography a1
+LEFT JOIN store_information A5
+ON A1.store_name = A5.Store_Name
+UNION
+SELECT A1.Region_Name, A1.store_name, A5.Store_Name, A5.Sales
+FROM geography A1
+RIGHT JOIN store_information A5
+ON A1.store_name = A5.Store_Name 
+```
+```
+SELECT * FROM t1
+LEFT JOIN t2 ON t1.id = t2.id
+UNION
+SELECT * FROM t1
+RIGHT JOIN t2 ON t1.id = t2.id
+```
