--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -77,3 +77,18 @@ UNION
 SELECT * FROM t1
 RIGHT JOIN t2 ON t1.id = t2.id
 ```
+### CONCATENATION
+```
+CONCATENATION(String1, String2,...)
+```
+```
+
+```
+### SUBSTRING
+```
+SUBSTRING(string,position)
+```
+### REPLACE
+```
+REPLACE(column name, string2,string3)
+```
