--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -82,7 +82,9 @@ RIGHT JOIN t2 ON t1.id = t2.id
 CONCATENATION(String1, String2,...)
 ```
 ```
-
+SELECT concat(Region_Name, store_name)
+FROM geography
+WHERE store_name='Boston'
 ```
 ### SUBSTRING
 ```
