--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -90,6 +90,11 @@ WHERE store_name='Boston'
 ```
 SUBSTRING(string,position)
 ```
+```
+SELECT substr(store_name, 3)
+FROM geography
+WHERE store_name='Los Angeles'
+```
 ### REPLACE
 ```
 REPLACE(column name, string2,string3)
