--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -95,6 +95,10 @@ SELECT substr(store_name, 3)
 FROM geography
 WHERE store_name='Los Angeles'
 ```
+### LENGTH
+```
+LENGTH(string)
+```
 ### REPLACE
 ```
 REPLACE(column name, string2,string3)
