--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -99,6 +99,11 @@ WHERE store_name='Los Angeles'
 ```
 LENGTH(string)
 ```
+```
+SELECT length(store_name)
+FROM geography
+WHERE store_name='Los Angeles'
+```
 ### REPLACE
 ```
 REPLACE(column name, string2,string3)
