--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -108,3 +108,11 @@ WHERE store_name='Los Angeles'
 ```
 REPLACE(column name, string2,string3)
 ```
+### 小考
+```
+SELECT ksu_std_department "Dept", COUNT(*) AS number
+FROM ksu_std_table
+WHERE ksu_std_department = 'CS'
+GROUP BY ksu_std_department
+HAVING COUNT(*) > 1
+```
