--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -116,3 +116,8 @@ WHERE ksu_std_department = 'CS'
 GROUP BY ksu_std_department
 HAVING COUNT(*) > 1
 ```
+```
+SELECT ksu_std_department "Dept", COUNT(*) AS number
+FROM ksu_std_table
+GROUP BY ksu_std_department
+```
