--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -108,7 +108,7 @@ WHERE store_name='Los Angeles'
 ```
 REPLACE(column name, string2,string3)
 ```
-### 小考
+### 小考 查詢相同資料筆數
 ```
 SELECT ksu_std_department "Dept", COUNT(*) AS number
 FROM ksu_std_table
