--- a/sql資料庫實務/1019.md
+++ b/sql資料庫實務/1019.md
@@ -121,3 +121,9 @@ SELECT ksu_std_department "Dept", COUNT(*) AS number
 FROM ksu_std_table
 GROUP BY ksu_std_department
 ```
+```
+select ksu_std_department as Dept
+count(*) as Number
+from ksu_std_department
+having lsu_std_department!= and count(*)>1;
+```
