--- a/資料結構/1025.md
+++ b/資料結構/1025.md
@@ -1,3 +1,66 @@
 ### 多筆資料同時包含多個欄位
 ```
+#include "stdio.h"
+#include "stdlib.h"
+
+int main(void){
+
+	struct data{
+		char name[10];
+		int score[3];
+		int total = 0;
+	};
+	data student[3];
+		
+		
+	
+	for(int i =0; i<3; i++){
+		printf("請輸入學生名字:");
+		scanf("%s",student[i].name);
+		
+		printf("請輸入國文成績:");
+		scanf("%d",&student[i].score[0]);
+		
+		printf("請輸入英文成績:");
+		scanf("%d",&student[i].score[1]);
+		
+		printf("請輸入數學成績:");
+		scanf("%d",&student[i].score[2]);
+		
+		for(int j = 0; j<3; j++){
+			student[i].total += student[i].score[j];
+		}
+		
+	}
+	for(int i=0; i<3; i++){
+		printf("姓名:%s, 國文:%d, 英文:%d, 數學:%d, 總分:%d,",
+		student[i].name,
+		student[i].score[0],
+		student[i].score[1],
+		student[i].score[2],
+		student[i].total);
+		printf("\n");
+	}
+	
+	return 0;
+ } 
+```
+```
+請輸入學生名字:小名
+請輸入國文成績60
+60
+請輸入英文成績60
+請輸入數學成績60
+請輸入學生名字:請輸入國文成績60
+60
+請輸入英文成績60
+請輸入數學成績6
+請輸入學生名字:請輸入國文成績060
+60
+請輸入英文成績60
+請輸入數學成績60
+姓名:小名, 國文:60, 英文:60, 數學:60 總分:180,
+姓名:60, 國文:60, 英文:60, 數學:60 總分:180,
+姓名:6, 國文:60, 英文:60, 數學:60 總分:180,
+
 ```
