--- a/資料結構/1025陣列堆疊.md
+++ b/資料結構/1025陣列堆疊.md
@@ -260,3 +260,14 @@ int compare(int your_answer[])
     }
 }
 ```
+## 堆疊Stack
+```
+只能由頂端進出
+放入PUSH
+取出POP
+```
+```
+資料input/output
+First In Last Out(FILO/LIFO):堆疊
+First In First Out(FIFO):佇列
+```
