--- a/資料結構/1025陣列堆疊.md
+++ b/資料結構/1025陣列堆疊.md
@@ -260,7 +260,7 @@ int compare(int your_answer[])
     }
 }
 ```
-## 堆疊Stack
+# 堆疊Stack
 ```
 只能由頂端進出
 放入PUSH
@@ -270,4 +270,15 @@ int compare(int your_answer[])
 資料input/output
 First In Last Out(FILO/LIFO):堆疊
 First In First Out(FIFO):佇列
+```
+## Pop
+```
+int pop(int n,double stack[],double*item,int*toop){
+	if(isEmpty(*top))return1;//StackEmpty
+	else{
+		*item=stack[*top];
+		*top=*top-1;
+		return0;//Job finish
+	}
+}
 ```
