--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -1,4 +1,6 @@
 # Char v.s Varchar
 ## create table
 ```
+CREATE TABLE customer
+(First_Name char(50),Last_Name char(50),Addres char(50), City char(50),Country char(25),Birth_Date datetime);
 ```
