--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -4,3 +4,7 @@
 CREATE TABLE customer
 (First_Name char(50),Last_Name char(50),Addres char(50), City char(50),Country char(25),Birth_Date datetime);
 ```
+## remove table
+```
+remove an existed table by using drop table "table name"
+```
