--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -10,5 +10,8 @@ remove an existed table by using drop table "table name"
 ```
 ## Constraint_unique
 ```
-
+CREATE TABLE Customer_2
+(SID integer UNIQUE KEY,
+Last_Name varchar(30),
+First_Name varchar(30));
 ```
