--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -15,3 +15,11 @@ CREATE TABLE Customer_2
 Last_Name varchar(30),
 First_Name varchar(30));
 ```
+## Change a column name
+```
+ALTER TABLE Customer CHANGE Addr Addr_new char(50);
+```
+### Modify a column's structure
+```
+ALTER TABLE Customer MODIFY Addr_new varchar(30);
+```
