--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -23,3 +23,8 @@ ALTER TABLE Customer CHANGE Addr Addr_new char(50);
 ```
 ALTER TABLE Customer MODIFY Addr_new varchar(30);
 ```
+### insert
+```
+INSERT INTO store_information (Store_Name, Sales, Txn_Date)
+VALUES ('Los Angles', 900, '1999-01-10')
+```
