--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -28,3 +28,10 @@ ALTER TABLE Customer MODIFY Addr_new varchar(30);
 INSERT INTO store_information (Store_Name, Sales, Txn_Date)
 VALUES ('Los Angles', 900, '1999-01-10')
 ```
+```
+INSERT INTO store_information_1
+(Store_Name, Sales,Txn_Date)
+VALUES
+('Lowell', 800, '1998-01-10'),
+('Lowell', 700, '1998-01-11');
+```
