--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -23,7 +23,8 @@ ALTER TABLE Customer CHANGE Addr Addr_new char(50);
 ```
 ALTER TABLE Customer MODIFY Addr_new varchar(30);
 ```
-### insert
+### insert 
+### insert multiple rows
 ```
 INSERT INTO store_information (Store_Name, Sales, Txn_Date)
 VALUES ('Los Angles', 900, '1999-01-10')
@@ -34,4 +35,10 @@ INSERT INTO store_information_1
 VALUES
 ('Lowell', 800, '1998-01-10'),
 ('Lowell', 700, '1998-01-11');
+```
+```
+INSERT INTO store_information (Store_Name, Sales, Txn_Date)
+SELECT Store_Name, Sales, Txn_Date
+FROM store_information_1
+WHERE Year(Txn_Date)=1998;
 ```
