--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -42,3 +42,15 @@ SELECT Store_Name, Sales, Txn_Date
 FROM store_information_1
 WHERE Year(Txn_Date)=1998;
 ```
+### update
+```
+UPDATE store_information
+SET Sales = 555
+WHERE Store_Name = 'Los Angeles'
+```
+```
+UPDATE store_information
+SET Sales = 777,
+	Store_Name = 'SunnyVale'
+WHERE Store_Name = 'Los Angeles'
+```
