--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -54,3 +54,8 @@ SET Sales = 777,
 	Store_Name = 'SunnyVale'
 WHERE Store_Name = 'Los Angeles'
 ```
+### delete
+```
+DELETE FROM store_information
+WHERE Sales=777;
+```
