--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -19,12 +19,12 @@ First_Name varchar(30));
 ```
 ALTER TABLE Customer CHANGE Addr Addr_new char(50);
 ```
-### Modify a column's structure
+## Modify a column's structure
 ```
 ALTER TABLE Customer MODIFY Addr_new varchar(30);
 ```
-### insert 
-### insert multiple rows
+## insert 
+## insert multiple rows
 ```
 INSERT INTO store_information (Store_Name, Sales, Txn_Date)
 VALUES ('Los Angles', 900, '1999-01-10')
@@ -42,7 +42,7 @@ SELECT Store_Name, Sales, Txn_Date
 FROM store_information_1
 WHERE Year(Txn_Date)=1998;
 ```
-### update
+## update
 ```
 UPDATE store_information
 SET Sales = 555
@@ -54,12 +54,12 @@ SET Sales = 777,
 	Store_Name = 'SunnyVale'
 WHERE Store_Name = 'Los Angeles'
 ```
-### delete
+## delete
 ```
 DELETE FROM store_information
 WHERE Sales=777;
 ```
-## Stores Procedure
+# Stores Procedure
 ```
 預存程序
 ```
