--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -62,4 +62,9 @@ WHERE Sales=777;
 # Stores Procedure
 ```
 預存程序
+
+DELIMITER $$
+CREATE DEFINER=`root`@`localhost` PROCEDURE `test1`()
+SELECT * FROM ksu_std_table$$
+DELIMITER ;
 ```
