--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -68,3 +68,15 @@ CREATE DEFINER=`root`@`localhost` PROCEDURE `test1`()
 SELECT * FROM ksu_std_table$$
 DELIMITER ;
 ```
+### test2
+```
+IF p1 < 60 THEN
+SELECT *
+FROM ksu_std_table
+WHERE ksu_std_grade < 60;
+ELSE
+SELECT *
+FROM ksu_std_table
+WHERE ksu_std_grade >= 60;
+END IF
+```
