--- a/sql資料庫實務/1026.md
+++ b/sql資料庫實務/1026.md
@@ -80,3 +80,16 @@ FROM ksu_std_table
 WHERE ksu_std_grade >= 60;
 END IF
 ```
+```
+DELIMITER $$
+CREATE DEFINER=`root`@`localhost` PROCEDURE `test2`(IN `p1` INT(100))
+IF p1 < 60 THEN
+SELECT *
+FROM ksu_std_table
+WHERE ksu_std_grade < 60;
+ELSE
+SELECT *
+FROM ksu_std_table
+WHERE ksu_std_grade >= 60;
+END IF$$
+```
