--- a/資料結構/1101.md
+++ b/資料結構/1101.md
@@ -3,6 +3,27 @@
 第一章到第三章(堆疊佇列)
 30%
 ```
-## 
+# 運算是表示法
 ```
+運算元():+ - * /
+運算子():被運算的數字
+```
+## 中序表示法 後序表示法 前序表示法
+```
+有優先權的運算元先移動
+```
+### infix expression :3/5+5*(2+4)
+```
+postfix expression:35/524+*+
+prefix expression:+/35*5+24
+```
+### infix expression :7+5*(6-3*(2+4))
+```
+postfix expression:7+56324+*-*+
+prefix expression:+7*5-6*3+24
+```
+### postfix expression:74*28345+*-*-
+```
+infix expression :7*4-2*(8-3*(4+5))
+prefix expression:-*74*2-8*3+45
 ```
