--- a/資料結構/1101.md
+++ b/資料結構/1101.md
@@ -30,4 +30,84 @@ prefix expression:-*74*2-8*3+45
 # 將數學式子由衷序表示法轉為後序表示法
 ## 程式碼
 ```
+#include "stdio.h"
+#include "stdlib.h"
+#define MAX 20
+
+void infix_to_postfix(char[],int);
+int comapre(char, char);
+char infix_priority[9]={'#',')','+','-','*','/','^','('};
+char stack_priority[8]={'#','(','+','-','*','/','^'};
+
+
+int main(){
+	int index=-1;
+	char infix_q[MAX];
+	printf("請輸入中序表示法:");
+	while(infix_q[index]!='\n')
+		infix_q[++index] = getchar();
+	infix_q[index] = '#';
+	
+	printf("後序表示法:");
+	infix_to_postfix(infix_q, index);
+	
+	printf("\n");
+	return 0;
+}
+
+void infix_to_postfix(char infix_q[], int index){
+	int top =0, ctr, tag=1;
+	char stack_t[MAX];
+	stack_t[top]='#';
+	for(ctr =0; ctr<=index; ctr++){
+		switch(infix_q[ctr]){
+			case ')':
+				while(stack_t[top] != '(')
+					printf("%c", stack_t[top--]);
+				top--;
+				break;
+			case '#':
+				while(stack_t[top] != '#')
+					printf("%c", stack_t[top--]);
+				break;
+			case '(':
+			case '^':
+			case '*':
+			case '/':
+				while(comapre(stack_t[top], infix_q[ctr]))
+					printf("%c", stack_t[top--]);
+				stack_t[++top]=	infix_q[ctr];
+				tag=1;
+				break;
+			case '+':
+			case '-':
+				if(tag==1){
+					stack_t[++top]=	infix_q[ctr];
+					tag =2;	
+				}
+				else{
+					while(comapre(stack_t[top], infix_q[ctr]))
+						printf("%c", stack_t[top--]);
+					stack_t[++top]=	infix_q[ctr];
+					tag=1;
+				}
+				break;
+			default:
+				printf("%c", infix_q[ctr]);
+				if(tag==2)
+					printf("%c", stack_t[top--]);
+				tag =0;
+				break;					
+		}
+	}
+}
+
+int comapre(char stack_o, char infix_o){
+	int index_s =0, index_i =0;
+	while (stack_priority[index_s] != stack_o)
+		index_s++;
+	while (infix_priority[index_i] != infix_o)
+		index_i++;
+	return index_s/2 >= index_i/2? 1:0; 
+}
 ```
