--- a/C/變數、常數與資料型態.md
+++ b/C/變數、常數與資料型態.md
@@ -8,8 +8,8 @@ int = %d
 double,float = %f
 ```
 ### \n
-
-/* output20.c */
+``
+/* output20.c */ comment statement
 #include <stdio.h>
 #include <stdlib.h>
 int main()
@@ -20,7 +20,19 @@ int main()
     return 0;
 }
 ```
+
 大家好，
 讓我們一起來學C程式語言!!!
+### \n\n 
 ```
-
+/* output30.c */
+#include <stdio.h>
+#include <stdlib.h>
+int main()
+{
+    printf("大家好，\n\n");
+    printf("讓我們一起來學C程式語言!!!\n");
+    system("PAUSE");
+    return 0;
+}
+```
