--- a/C/變數、常數與資料型態.md
+++ b/C/變數、常數與資料型態.md
@@ -8,7 +8,7 @@ int = %d
 double,float = %f
 ```
 ### \n
-``
+```
 /* output20.c */ comment statement
 #include <stdio.h>
 #include <stdlib.h>
@@ -36,3 +36,7 @@ int main()
     return 0;
 }
 ```
+大家好，
+
+讓我們一起來學C程式語言!!!
+
