--- a/C/變數、常數與資料型態.md
+++ b/C/變數、常數與資料型態.md
@@ -7,6 +7,18 @@ double = 8bytes
 int = %d
 double,float = %f
 ```
+```
+/* output40.c */
+#include <stdio.h>
+#include <stdlib.h>
+int main()
+{
+    printf("我目前有 %d 元\n", 100);
+    printf("我的C語言成績是 %f 分\n", 89.98);
+    system("PAUSE");
+    return 0;
+}
+```
 ### \n
 ```
 /* output20.c */ comment statement
