--- a/C/變數、常數與資料型態.md
+++ b/C/變數、常數與資料型態.md
@@ -54,4 +54,17 @@ int main()
 大家好，
 
 讓我們一起來學C程式語言!!!
+### %%
+```
+/* output70.c */
+#include <stdio.h>
+#include <stdlib.h>
+int main()
+{
+    printf("我喝的是100%%蘋果汁\n");
+    system("PAUSE");
+    return 0;
+}
+```
+我喝的是100%蘋果汁
 
