--- a/1121.md
+++ b/1121.md
@@ -5,3 +5,7 @@ https://app.egghead.io/playlists/fundamentals-of-redux-course-from-dan-abramov-b
 ```
 https://pjchender.dev/react/redux-react-redux-api/
 ```
+# api
+```
+https://jimmyswebnote.com/what-is-api/
+```
