--- a/1121.md
+++ b/1121.md
@@ -9,3 +9,7 @@ https://pjchender.dev/react/redux-react-redux-api/
 ```
 https://jimmyswebnote.com/what-is-api/
 ```
+# mongo db
+```
+https://zh-tw.coderbridge.com/series/800ffff9f7524d35ac6ecc51fffda4b9/posts/fccb25a652444dfda38629965eac7c7d
+```
