--- a/1121.md
+++ b/1121.md
@@ -17,3 +17,16 @@ https://zh-tw.coderbridge.com/series/800ffff9f7524d35ac6ecc51fffda4b9/posts/fccb
 ```
 https://cpe.cse.nsysu.edu.tw/
 ```
+# TensorFlow
+```
+https://www.tensorflow.org/tutorials?hl=zh-tw
+https://www.tensorflow.org/overview?hl=zh-tw
+```
+# vue
+```
+https://book.vue.tw/CH1/1-1-introduction.html
+```
+# Neural Network 
+```
+https://ithelp.ithome.com.tw/articles/10191528
+```
