--- a/1121.md
+++ b/1121.md
@@ -21,3 +21,5 @@ https://book.vue.tw/CH1/1-1-introduction.html
 # Neural Network 
 https://ithelp.ithome.com.tw/articles/10191528
 
+# java
+https://www.johntool.com/java-for-beginner/
