--- a/1121.md
+++ b/1121.md
@@ -1,5 +1,6 @@
 # redux
 https://app.egghead.io/playlists/fundamentals-of-redux-course-from-dan-abramov-bd5cc867
+
 https://pjchender.dev/react/redux-react-redux-api/
 
 # api
@@ -13,6 +14,7 @@ https://cpe.cse.nsysu.edu.tw/
 
 # TensorFlow
 https://www.tensorflow.org/tutorials?hl=zh-tw
+
 https://www.tensorflow.org/overview?hl=zh-tw
 
 # vue
@@ -23,8 +25,14 @@ https://ithelp.ithome.com.tw/articles/10191528
 
 # java
 https://www.johntool.com/java-for-beginner/
+
 https://tw-hkt.blogspot.com/2019/03/2019-java-326.html
 
 # c++
+
 https://www.runoob.com/cplusplus/cpp-tutorial.html
+
 https://docs.microsoft.com/zh-tw/cpp/cpp/?view=msvc-170
+
+# wordpress
+https://frankknow.com/wordpress-build-teach/
