--- a/爬蟲/1122.md
+++ b/爬蟲/1122.md
@@ -15,3 +15,6 @@ https://www.youtube.com/c/Largitdata/videos
 
 ## Python 網路爬蟲實戰馬拉松
 https://www.cupoy.com/event/pycrawler/intro
+
+## 彭彭的課程
+https://www.youtube.com/c/%E5%BD%AD%E5%BD%AD%E7%9A%84%E8%AA%B2%E7%A8%8B
