--- a/sql資料庫實務/1123.md
+++ b/sql資料庫實務/1123.md
@@ -13,5 +13,22 @@ WHERE std_address LIKE '%Dr.' OR dept_id = 'IE'
 SELECT * FROM `student_detail`
 WHERE dept_id = 'IE' OR  std_address like "%Dr."
 ```
-## group by
+```
+SELECT std_name,std_address,dept_id
+FROM student_detail
+WHERE std_address LIKE '%Dr.' AND dept_id = 'IE'
+```
+```
+SELECT * FROM `ksu_std_table` 
+WHERE ksu_std_name LIKE 'John%' AND ksu_std_grade = 100
+```
+```
+SELECT ksu_std_name,ksu_std_department,ksu_std_age,ksu_std_grade
+FROM ksu_std_table
+WHERE ksu_std_name LIKE 'John%' AND ksu_std_department = 'CS' AND ksu_std_age = 22
+```
+```
+SELECT ksu_std_name '姓名',ksu_std_department '部門',ksu_std_age '年齡',ksu_std_grade '成績'
+FROM ksu_std_table
+WHERE ksu_std_name LIKE 'John%' AND ksu_std_department = 'CS' AND ksu_std_age = 22
 ```
