--- a/sql資料庫實務/1123.md
+++ b/sql資料庫實務/1123.md
@@ -32,3 +32,11 @@ SELECT ksu_std_name '姓名',ksu_std_department '部門',ksu_std_age '年齡',ks
 FROM ksu_std_table
 WHERE ksu_std_name LIKE 'John%' AND ksu_std_department = 'CS' AND ksu_std_age = 22
 ```
+### 結合表格
+```
+SELECT k.ksu_std_id 學號, d.dept_name 系名,
+MAX(k.ksu_std_grade) 最高成績, COUNT(*) 人數
+FROM ksu_std_table k, dept_detail d
+WHERE k.ksu_std_department = d.dept_id
+GROUP BY d.dept_id
+```
