--- a/sql資料庫實務/1123.md
+++ b/sql資料庫實務/1123.md
@@ -40,3 +40,10 @@ FROM ksu_std_table k, dept_detail d
 WHERE k.ksu_std_department = d.dept_id
 GROUP BY d.dept_id
 ```
+```
+SELECT d.dept_name 系名,
+MIN(k.ksu_std_grade) 最低成績, COUNT(*) 人數
+FROM ksu_std_table k, dept_detail d
+WHERE k.ksu_std_department = d.dept_id AND k.ksu_std_department = 'IE'
+GROUP BY d.dept_id
+```
