--- a/sql資料庫實務/1123.md
+++ b/sql資料庫實務/1123.md
@@ -41,7 +41,7 @@ WHERE k.ksu_std_department = d.dept_id
 GROUP BY d.dept_id
 ```
 ```
-SELECT d.dept_name 系名,
+SELECT k.ksu_std_department 部門,
 MIN(k.ksu_std_grade) 最低成績, COUNT(*) 人數
 FROM ksu_std_table k, dept_detail d
 WHERE k.ksu_std_department = d.dept_id AND k.ksu_std_department = 'IE'
