--- a/sql資料庫實務/1123.md
+++ b/sql資料庫實務/1123.md
@@ -47,3 +47,10 @@ FROM ksu_std_table k, dept_detail d
 WHERE k.ksu_std_department = d.dept_id AND k.ksu_std_department = 'IE'
 GROUP BY d.dept_id
 ```
+```
+SELECT k.ksu_std_department 部門,
+MAX(k.ksu_std_grade) 最高成績,AVG(k.ksu_std_grade) 平均分數, COUNT(*) 人數
+FROM ksu_std_table k, dept_detail d
+WHERE k.ksu_std_department = d.dept_id AND k.ksu_std_department LIKE 'I%'
+GROUP BY d.dept_id
+```
