--- a/爬蟲/1122.md
+++ b/爬蟲/1122.md
@@ -18,3 +18,6 @@ https://www.cupoy.com/event/pycrawler/intro
 
 ## 彭彭的課程
 https://www.youtube.com/c/%E5%BD%AD%E5%BD%AD%E7%9A%84%E8%AA%B2%E7%A8%8B
+
+##　莫煩-網頁爬蟲教程系列
+https://mofanpy.com/tutorials/data-manipulation/scraping/
