--- a/1121.md
+++ b/1121.md
@@ -36,3 +36,8 @@ https://docs.microsoft.com/zh-tw/cpp/cpp/?view=msvc-170
 
 # wordpress
 https://frankknow.com/wordpress-build-teach/
+
+https://www.sololearn.com/home
+
+# w3school
+https://www.w3schools.com/html/default.asp
