--- a/資料結構/1129樹狀結構.md
+++ b/資料結構/1129樹狀結構.md
@@ -1,3 +1,158 @@
 ```
 鏈結串列解決陣列缺點
 ```
+##　單向鏈結串列(Single Linked List)的合併
+```
+struct node* MergeLists(struct node* header1, struct node* header2){
+struct node* current;
+current = header1;
+while(current->next != NULL){
+current = current->next;
+}
+current->next = header2;
+return header1;
+}
+```
+## 雙向鏈結串列(Doubly Linked List)
+```
+雙向鏈結串列(doubly linked list)乃是每個節點皆具有三個欄位，
+左鏈結（LLINK）, 資料（DATA）,右鏈結（RLINK）
+```
+```
+struct node{
+ struct node* pri=NULL; //指向前一個節點位址
+ struct node* next=NULL; //指向後一個節點位址
+ int data;
+ }; 
+```
+## 建立節點
+```
+struct node* node_point;
+node_point = (struct node*)malloc(sizeof(struct node));
+```
+## 雙向鏈結程式碼
+```
+DLinklist.h\\\\\\\\\\\\\\\\\\\
+struct node* Createnode(struct node*, int);
+struct node* Add(struct node*, int);
+struct node* Insertnode(struct node*, int, int);
+struct node* Delete(struct node*, int);
+struct node* Show(struct node*);
+DLinklist.cpp\\\\\\\\\\\\\\\\\\\
+#include "stdio.h"
+#include "stdlib.h"
+#include "DLinklist.h"
+struct node{
+struct node* pri=NULL;
+struct node* next=NULL;
+int data;
+};
+static struct node* header;
+int main(){
+int s=0, value;
+header = NULL;
+while(s!=5){
+printf("1.新增一個節點 (加在鏈結串列尾部)\n");
+printf("2.插入一個節點\n");
+printf("3.刪除一個節點\n");
+printf("4.顯示串列所有節點的值\n");
+printf("5.結束 \n");
+scanf("%d",&s);
+if(s==1){
+printf("請輸入新增節點的值:");
+scanf("%d", &value);
+if(header == NULL){
+header = Createnode(header, value);
+}
+else header = Add(header, value);
+}
+if(s==2){
+printf("請輸入新節點的位置: ");
+scanf("%d", &number);
+printf("請輸入新節點的值: ");
+scanf("%d", &value);
+header = Insertnode(header, number, value);
+}
+if(s==3){
+printf("請輸入要刪除節點的值:");
+scanf("%d", &value);
+header = Delete(header, value);
+}
+if(s==4){
+header = Show(header);
+}
+}
+return 0;
+}
+struct node* Createnode(struct node* header, int value){
+header = (struct node *)malloc(sizeof(struct node));
+if(header == NULL) return NULL;
+header->data = value;
+header->next = NULL;
+header->pri = NULL;
+return header;
+}
+struct node * Add(struct node * header, int value){
+struct node * current;
+current = header;
+while(current->next != NULL){
+current = current->next;
+}
+current->next = (struct node *)malloc(sizeof(struct node));
+current->next->data = value;
+current->next->pri = current;
+current->next->next = NULL;
+return header;
+}
+struct node* Insertnode (struct node* header, int number, int value){
+struct node* current;
+struct node* nextnode;
+current = header;
+if(number==1){
+header = (struct node*)malloc(sizeof(struct node));
+header->data = value;
+header->pri = NULL;
+header->next = current;
+current->pri = header;
+}
+else{
+for(int i=2; i<= number-1; i++){
+current = current->next;
+}
+nextnode = current->next;
+current->next = (struct node*)malloc(sizeof(struct node));
+current->next->data = value;
+current->next->next = nextnode;
+current->next->pri = current;
+nextnode->pri = current->next;
+}
+return header;
+}
+struct node * Delete(struct node * header, int value){
+struct node * current;
+current = header;
+while(current->data != value){
+current = current->next;
+}
+if (current->pri == NULL){
+header = current->next;
+header->pri = NULL;
+}
+else{
+current->pri->next = current->next;
+current->next->pri = current->pri;
+}
+free(current);
+return header;
+}
+struct node * Show(struct node * header){
+struct node * current;
+current = header;
+while(current!=NULL){
+printf("%d, ", current->data);
+current = current->next;
+}
+printf("\n");
+return header;
+}
+```
