--- a/資料結構/1129樹狀結構.md
+++ b/資料結構/1129樹狀結構.md
@@ -38,121 +38,208 @@ struct node* Add(struct node*, int);
 struct node* Insertnode(struct node*, int, int);
 struct node* Delete(struct node*, int);
 struct node* Show(struct node*);
+
 DLinklist.cpp\\\\\\\\\\\\\\\\\\\
 #include "stdio.h"
 #include "stdlib.h"
 #include "DLinklist.h"
+
 struct node{
-struct node* pri=NULL;
-struct node* next=NULL;
-int data;
-};
+		struct node* pri=NULL;
+		struct node* next=NULL;
+		int data;
+	};
 static struct node* header;
+
 int main(){
-int s=0, value;
-header = NULL;
-while(s!=5){
-printf("1.新增一個節點 (加在鏈結串列尾部)\n");
-printf("2.插入一個節點\n");
-printf("3.刪除一個節點\n");
-printf("4.顯示串列所有節點的值\n");
-printf("5.結束 \n");
-scanf("%d",&s);
-if(s==1){
-printf("請輸入新增節點的值:");
-scanf("%d", &value);
-if(header == NULL){
-header = Createnode(header, value);
+	int s=0, value;
+	header = NULL;
+	while(s!=5){
+		printf("1.新增一個節點 (加在鏈結串列尾部)\n");
+		printf("2.插入一個節點\n");
+		printf("3.刪除一個節點\n");
+		printf("4.顯示串列所有節點的值\n");
+		printf("5.結束 \n");
+		scanf("%d",&s);
+		if(s==1){
+			printf("請輸入新增節點的值:");
+			scanf("%d", &value);
+			if(header == NULL){
+				header = Createnode(header, value);
+			}
+			else header = Add(header, value);
+		}
+		if(s==2){
+			printf("請輸入新節點的位置: ");
+			scanf("%d", &number);
+			printf("請輸入新節點的值: ");
+			scanf("%d", &value);
+			header = Insertnode(header, number, value);
+		}
+		if(s==3){
+			printf("請輸入要刪除節點的值:");
+			scanf("%d", &value);
+			header = Delete(header, value);
+		}
+		if(s==4){
+			header = Show(header);
+		}
+	}
+	return 0;	
 }
-else header = Add(header, value);
-}
-if(s==2){
-printf("請輸入新節點的位置: ");
-scanf("%d", &number);
-printf("請輸入新節點的值: ");
-scanf("%d", &value);
-header = Insertnode(header, number, value);
-}
-if(s==3){
-printf("請輸入要刪除節點的值:");
-scanf("%d", &value);
-header = Delete(header, value);
-}
-if(s==4){
-header = Show(header);
-}
-}
-return 0;
-}
+
+
 struct node* Createnode(struct node* header, int value){
-header = (struct node *)malloc(sizeof(struct node));
-if(header == NULL) return NULL;
-header->data = value;
-header->next = NULL;
-header->pri = NULL;
-return header;
+	header = (struct node *)malloc(sizeof(struct node));
+	if(header == NULL) return NULL;
+	header->data = value;
+	header->next = NULL;
+	header->pri = NULL;
+	return header;
 }
+
 struct node * Add(struct node * header, int value){
-struct node * current;
-current = header;
-while(current->next != NULL){
-current = current->next;
+	struct node * current;
+	current = header;
+	while(current->next != NULL){
+		current = current->next;
+	}	
+	current->next = (struct node *)malloc(sizeof(struct node));
+	current->next->data = value;
+	current->next->pri = current;
+	current->next->next = NULL;
+	return header;
 }
-current->next = (struct node *)malloc(sizeof(struct node));
-current->next->data = value;
-current->next->pri = current;
-current->next->next = NULL;
-return header;
-}
+
 struct node* Insertnode (struct node* header, int number, int value){
-struct node* current;
-struct node* nextnode;
-current = header;
-if(number==1){
-header = (struct node*)malloc(sizeof(struct node));
-header->data = value;
-header->pri = NULL;
-header->next = current;
-current->pri = header;
+	struct node* current;
+	struct node* nextnode;
+	current = header;
+	if(number==1){
+		header = (struct node*)malloc(sizeof(struct node));
+		header->data = value;
+		header->pri = NULL;
+		header->next = current;
+		current->pri = header;
+	}
+	else{
+		for(int i=2; i<= number-1; i++){
+			current = current->next;
+		}
+		nextnode = current->next;
+		current->next = (struct node*)malloc(sizeof(struct node));
+		current->next->data = value;
+		current->next->next = nextnode;
+		current->next->pri = current;
+		nextnode->pri = current->next;
+	}
+	return header;
 }
-else{
-for(int i=2; i<= number-1; i++){
-current = current->next;
-}
-nextnode = current->next;
-current->next = (struct node*)malloc(sizeof(struct node));
-current->next->data = value;
-current->next->next = nextnode;
-current->next->pri = current;
-nextnode->pri = current->next;
-}
-return header;
-}
+
+
 struct node * Delete(struct node * header, int value){
-struct node * current;
-current = header;
-while(current->data != value){
-current = current->next;
+	struct node * current;
+	current = header;
+	while(current->data != value){
+		current = current->next;
+	}
+	if (current->pri == NULL){
+		header = current->next;
+		header->pri = NULL;
+	}
+	else{
+		current->pri->next = current->next;
+		current->next->pri = current->pri;
+	}
+	free(current);
+	return header;
 }
-if (current->pri == NULL){
-header = current->next;
-header->pri = NULL;
-}
-else{
-current->pri->next = current->next;
-current->next->pri = current->pri;
-}
-free(current);
-return header;
-}
+
 struct node * Show(struct node * header){
-struct node * current;
-current = header;
-while(current!=NULL){
-printf("%d, ", current->data);
-current = current->next;
+	struct node * current;
+	current = header;
+	while(current!=NULL){
+		printf("%d, ", current->data);
+		current = current->next;
+	}
+	printf("\n");
+	return header;
 }
-printf("\n");
-return header;
+
+```
+# 雙向鏈結程式碼細部說明
+### 建立節點
+```
+struct node* createnode(struct node* header, int value){
+	header = (struct node*)malloc(sizeof(struct node));
+	//在記憶體配置struct node大小的記憶體空間,並把位址傳給header
+	if(header == NULL) return NULL;
+	//若header的值是NULL, 則表示配置失敗, 函式結束, 回傳NULL
+	header->data = value;
+	//將value的值是存放在header位址的data欄位
+	header->pri = NULL;
+	//將header位址的pri欄位設為NULL
+	header->next = NULL;
+	//將header位址的next欄位設為NULL
+	return header;
+	//函式結束, 回傳header位址
+}
+
+```
+### 加入節點
+```
+struct node* Add(struct node* header, int value){
+	struct node* current;
+	current = header;
+	while(current->next != NULL){
+		current = current->next;
+	}//找出在鏈結串列中最後一個節點,並把位址傳給current
+	current->next = (struct node*)malloc(sizeof(struct node));
+	//在記憶體配置記憶體空間給node,並把位址傳給current中的next欄位
+	current->next->data = value;
+	//將value的值是存放在current->next位址的data欄位
+	current->next->pri = current;
+	//將current->next位址存放在current->next位址的pri欄位
+	current->next->next = NULL;
+	//將current->next位址的next欄位設為NULL
+	return header;
+	//函式結束, 回傳header位址
+}
+```
+### 插入節點
+```
+struct node* Insertnode (struct node* header, int number, int value){
+	struct node* current;
+	struct node* nextnode;
+	current = header;
+	if(number==1){
+		header = (struct node*)malloc(sizeof(struct node));
+		header->data = value;
+		header->pri = NULL;
+		header->next = current;
+		current->pri = header;
+
+	}//若要插入為第一個節點, 記憶體配置的記憶體空間位置傳給header
+	//並把插入節點的pri欄位設為NULL 
+//並把原先第一個節點位址傳給第一個節點的next欄位
+//並把插入節點位址傳給原先第一個節點的pri欄位
+	else{
+		for(int i=2; i<= number-1; ++i){
+			current = current->next;
+		}//找出要插入節點的前一個節點, 並把其記憶體位址傳給current
+		nextnode = current->next;
+		//要插入節點的下一個節點記憶體位址傳給nextnode
+		current->next = (struct node*)malloc(sizeof(struct node));
+		current->next->pri = current;
+		nextnode->pri = current->next;
+
+		//記憶體配置的記憶體空間位置傳給前一個節點的next欄位
+		current->next->data = value;
+		//把值存入新配置節點的data欄位
+		current->next->next = nextnode;
+		current->next->pri = current;
+		nextnode->pri = current->next;
+	}
+	return header;
 }
 ```
