--- a/資料結構/1129樹狀結構.md
+++ b/資料結構/1129樹狀結構.md
@@ -1,7 +1,7 @@
 ```
 鏈結串列解決陣列缺點
 ```
-##　單向鏈結串列(Single Linked List)的合併
+## 單向鏈結串列(Single Linked List)的合併
 ```
 struct node* MergeLists(struct node* header1, struct node* header2){
 struct node* current;
@@ -240,6 +240,47 @@ struct node* Insertnode (struct node* header, int number, int value){
 		current->next->pri = current;
 		nextnode->pri = current->next;
 	}
+	return header;
+}
+```
+### 刪除節點
+```
+struct node* Delete(struct node* header, int value){
+	struct node* current;
+	struct node* currentpri;
+	current = header;
+	while(current->data != value){
+		currentpri = current;
+		current = current->next;
+	}//從第一個節點依序找出要刪除的節點
+	//current指標指向要刪除節點的位址
+//currentpri指標指向要刪除節點的前一個節點位址
+	if (current == header){
+		header = current->next;
+		header->pri = NULL;
+	}//若要刪除的是第一個節點, header指標指向第一個節點的下個節點位址
+	else{
+		currentpri->next = current->next;
+		current->next->pri = current->pri;
+	}//把要刪除節點的上一個節點的next指標指向要刪除節點的下個節點位址
+	//把要刪除節點的下一個節點的pri指標指向要刪除節點的上個節點位址
+	free(current);
+	//把要刪除的節點從記憶體清除
+	return header;
+	//函式結束, 回傳header位址
+}
+
+```
+### 顯示串列所有節點的資料值
+```
+struct node* Show(struct node* header){
+	struct node* current;
+	current = header;
+	while(current!=NULL){
+		printf("%d, ", current->data);
+		current = current->next;
+	}//依序顯示串列中每個節點資料欄位地值
+	printf("\n");
 	return header;
 }
 ```
