--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -3,7 +3,7 @@
 ksu_std_grade 不可低於70分 且 該系學生人數大於1
 ```
 ```
-SELECT ksu_std_id 學號,ksu_std_department 系別,COUNT(*) 人數,AVG(ksu_std_grade) 平均
+SELECT ksu_std_department 系別,COUNT(*) 人數,AVG(ksu_std_grade) 平均
 FROM `ksu_std_table` 
 WHERE ksu_std_department !="" AND ksu_std_grade >= 70
 GROUP BY ksu_std_department 
