--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -9,3 +9,16 @@ WHERE ksu_std_department !="" AND ksu_std_grade >= 70
 GROUP BY ksu_std_department 
 HAVING COUNT(*)>1
 ```
+```
+篩選ksu_std_department 不可為空
+且學生個人成績不可低於70
+且該系學生平均大於85
+請顯示 學號 系別 系人數 平均
+```
+```
+SELECT ksu_std_department 系別,COUNT(*) 人數,AVG(ksu_std_grade) 平均
+FROM `ksu_std_table` 
+WHERE ksu_std_department !="" AND ksu_std_grade >= 70 /*個人條件*/
+GROUP BY ksu_std_department 
+HAVING COUNT(*)>1 AND AVG(ksu_std_grade) > 85 /*聚集條件*/
+```
