--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -20,5 +20,5 @@ SELECT ksu_std_department 系別,COUNT(*) 人數,AVG(ksu_std_grade) 平均
 FROM `ksu_std_table` 
 WHERE ksu_std_department !="" AND ksu_std_grade >= 70 /*個人條件*/
 GROUP BY ksu_std_department 
-HAVING COUNT(*)>1 AND AVG(ksu_std_grade) > 85 /*聚集條件*/
+HAVING  AVG(ksu_std_grade) > 85 /*聚集條件*/
 ```
