--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -22,3 +22,16 @@ WHERE ksu_std_department !="" AND ksu_std_grade >= 70 /*個人條件*/
 GROUP BY ksu_std_department 
 HAVING  AVG(ksu_std_grade) > 85 /*聚集條件*/
 ```
+```
+選取ksu_std_table資料
+相同的同學姓名來選取
+計算相同學生姓名平均成績 人數
+且平均成績大於50 人數大於1個的篩選
+請顯示學生姓名 平均 人數
+```
+```
+SELECT ksu_std_name 姓名,COUNT(*) 人數, AVG(ksu_std_grade) 平均
+FROM `ksu_std_table` 
+GROUP BY ksu_std_name
+HAVING COUNT(*)>1 AND AVG(ksu_std_grade) >= 50
+```
