--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -35,3 +35,13 @@ FROM `ksu_std_table`
 GROUP BY ksu_std_name
 HAVING COUNT(*)>1 AND AVG(ksu_std_grade) >= 50
 ```
+```
+系代號為IE
+或是學生成績不等於100分的資料
+顯示 學號 姓名 系別 成績
+```
+```
+SELECT ksu_std_name 姓名, ksu_std_id 學號,ksu_std_department 系別 ,ksu_std_grade 成績
+FROM `ksu_std_table` 
+WHERE ksu_std_name = "IE" OR ksu_std_grade != 100
+```
