--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -45,3 +45,14 @@ SELECT ksu_std_name 姓名, ksu_std_id 學號,ksu_std_department 系別 ,ksu_std
 FROM `ksu_std_table` 
 WHERE ksu_std_name = "IE" OR ksu_std_grade != 100
 ```
+```
+篩選ksu_std_department 不可為空
+且學生姓名一開始字樣為J
+且結束字樣為g
+顯示 學號 姓名 系別 成績
+```
+```
+SELECT ksu_std_id 學號,ksu_std_name 姓名,ksu_std_department 系別,ksu_std_grade 成績
+FROM `ksu_std_table` 
+WHERE ksu_std_department !='' AND ksu_std_name LIKE 'J%' AND ksu_std_name LIKE '%g'
+```
