--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -54,5 +54,5 @@ WHERE ksu_std_name = "IE" OR ksu_std_grade != 100
 ```
 SELECT ksu_std_id 學號,ksu_std_name 姓名,ksu_std_department 系別,ksu_std_grade 成績
 FROM `ksu_std_table` 
-WHERE ksu_std_department !='' AND ksu_std_name LIKE 'J%' AND ksu_std_name LIKE '%g'
+WHERE ksu_std_department !='' AND ksu_std_name LIKE 'J%g' 
 ```
