--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -56,3 +56,13 @@ SELECT ksu_std_id 學號,ksu_std_name 姓名,ksu_std_department 系別,ksu_std_g
 FROM `ksu_std_table` 
 WHERE ksu_std_department !='' AND ksu_std_name LIKE 'J%g' 
 ```
+```
+結合ksu_std_table和dept_detail
+成績不小於80
+顯示 學號 系名 成績
+```
+```
+SELECT k.ksu_std_id 學號,d.dept_name 系名,k.ksu_std_grade 成績
+FROM ksu_std_table k, dept_detail d
+WHERE ksu_std_grade >= 80
+```
