--- a/sql資料庫實務/1130.md
+++ b/sql資料庫實務/1130.md
@@ -64,5 +64,5 @@ WHERE ksu_std_department !='' AND ksu_std_name LIKE 'J%g'
 ```
 SELECT k.ksu_std_id 學號,d.dept_name 系名,k.ksu_std_grade 成績
 FROM ksu_std_table k, dept_detail d
-WHERE ksu_std_grade >= 80
+WHERE ksu_std_grade >= 80 AND k.u_std_grade d.dept_id
 ```
