--- a/資料結構/1206二元樹.md
+++ b/資料結構/1206二元樹.md
@@ -1,1 +1,15 @@
-
+## 鏈結串列 vs 樹狀結構
+```
+每個節點後面至多連接一個節點
+```
+## 樹狀結構
+```
+每個節點後面可連接多個節點
+```
+## 分支度
+```
+一個節點後面連接的節點數目稱為該節點的分支度
+```
+```
+該數最高的連接的節的數目為該樹的分支度
+```
