--- a/資料結構/1206二元樹.md
+++ b/資料結構/1206二元樹.md
@@ -17,3 +17,11 @@
 ```
 分支度為0的節點稱為樹葉，又稱:終端節點或是外部節點
 ```
+## 節點
+```
+子節點(children): 對於任一個節點 X，它後面連結的節點稱為 X 節點的子節點。
+父節點(children): 對於任一個節點 X，它前面連結的節點稱為 X 節點的父節點。
+```
+```
+任一個節點可以有多個子節點或沒有, 但一定只有一個父節點 (樹根例外)
+```
