--- a/資料結構/1206二元樹.md
+++ b/資料結構/1206二元樹.md
@@ -21,6 +21,8 @@
 ```
 子節點(children): 對於任一個節點 X，它後面連結的節點稱為 X 節點的子節點。
 父節點(children): 對於任一個節點 X，它前面連結的節點稱為 X 節點的父節點。
+兄弟節點(siblings): 擁有相同的父節點，稱為兄弟(siblings)。
+祖先節點(ancestors): 一個節點的祖先(ancestors)指的是這個節點通往樹根時所經過的所有節點。
 ```
 ```
 任一個節點可以有多個子節點或沒有, 但一定只有一個父節點 (樹根例外)
