--- a/資料結構/1206二元樹.md
+++ b/資料結構/1206二元樹.md
@@ -27,3 +27,12 @@
 ```
 任一個節點可以有多個子節點或沒有, 但一定只有一個父節點 (樹根例外)
 ```
+## 進階思考解答
+```
+一個有 n 個節點，分支度為 k 的樹，若用串列表示法表示，請問總共有幾個鏈
+結欄位，其中有多少個欄位是空的未用？
+答案：
+一個有 n 個節點的樹，需要 n-1 個鏈結欄位；以串列表示法表示時，分支度為 k
+的樹，一個記憶體節點有 k 個鏈結欄位；所以共有 n x k 個鏈結欄位；因此空的
+未用的鏈結欄位有 n x k–(n–1)= n(k-1)+1 個
+```
