--- a/資料結構/1206二元樹.md
+++ b/資料結構/1206二元樹.md
@@ -31,8 +31,22 @@
 ```
 一個有 n 個節點，分支度為 k 的樹，若用串列表示法表示，請問總共有幾個鏈
 結欄位，其中有多少個欄位是空的未用？
+```
+```
 答案：
 一個有 n 個節點的樹，需要 n-1 個鏈結欄位；以串列表示法表示時，分支度為 k
 的樹，一個記憶體節點有 k 個鏈結欄位；所以共有 n x k 個鏈結欄位；因此空的
 未用的鏈結欄位有 n x k–(n–1)= n(k-1)+1 個
+```
+## 動動腦
+```
+若在完整二元樹內有個編號 401 的節點，請問
+此節點在該樹的第幾階？
+此節點的父節點的編號為何？
+若此節點有左子，其左子的編號為何？
+若此節點有右子，其右子的編號為何？
+```
+```
+編號 i 的節點，在第 k 階，k= ceil( log2(i+1) ) ，其左子編號 L= 2i，其右子編號
+R= 2i + 1，其父編號 F=floor( i/2 )
 ```
