--- a/sql資料庫實務/1207.md
+++ b/sql資料庫實務/1207.md
@@ -1,3 +1,48 @@
 
 socket = ip+port
 
+```
+<?php
+ $db_host = "localhost";
+ $db_name = "ksu_database";
+ $db_table = "ksu_std_table";
+ $db_user = "root";
+ $db_password = "";
+ // check connection
+ $conn = mysqli_connect($db_host, $db_user, $db_password);
+ if(empty($conn)){
+	print  mysqli_error ($conn);
+    die ("Unable to connect to DB！" );
+	exit;
+ }  
+ if(!mysqli_select_db( $conn, $db_name)){
+	die("DB is not existed");
+	exit;
+ }  
+ //main scope  
+mysql_set_charset($conn, 'utf8');
+
+echo "ksu_std_table:the number of students as follows:"."<br/><br/>";
+$result = mysqli_query($conn,
+	"SELECT ksu_std_department, count(1) FROM ksu_std_table group by ksu_std_department");
+echo"<table border='1'>
+<tr>
+	<th> Department </th> <th> the number of students </th>
+</tr>";
+//use mysql_fetch_array() takes the data from DB
+while($row = mysql_fetch_array($result))
+{
+	echo"<tr>";
+	echo"<td>" . $row['ksu_std_department'] . "</td>";
+	echo"<td>" . $row['count(1)'] . "</td>"
+	echo"</tr>";
+}
+   
+ echo "</table >";
+ echo"records found!"."<br/><br/>";
+
+?> 
+<form enctype="multipart/form-data" method="post" action="ksu_select3em.html" >
+<input type="submit" name="sub" value="Back"/>
+</form>
+```
