--- a/sql資料庫實務/1207.md
+++ b/sql資料庫實務/1207.md
@@ -4,7 +4,7 @@ socket = ip+port
 ```
 <?php
  $db_host = "localhost";
- $db_name = "ksu_database";
+ $db_name = "test";
  $db_table = "ksu_std_table";
  $db_user = "root";
  $db_password = "";
@@ -20,7 +20,7 @@ socket = ip+port
 	exit;
  }  
  //main scope  
-mysql_set_charset($conn, 'utf8');
+mysqli_set_charset($conn,'utf8');
 
 echo "ksu_std_table:the number of students as follows:"."<br/><br/>";
 $result = mysqli_query($conn,
@@ -30,11 +30,11 @@ echo"<table border='1'>
 	<th> Department </th> <th> the number of students </th>
 </tr>";
 //use mysql_fetch_array() takes the data from DB
-while($row = mysql_fetch_array($result))
+while($row = mysqli_fetch_array($result))
 {
 	echo"<tr>";
 	echo"<td>" . $row['ksu_std_department'] . "</td>";
-	echo"<td>" . $row['count(1)'] . "</td>"
+	echo"<td>" . $row['count(1)'] . "</td>";
 	echo"</tr>";
 }
    
@@ -42,7 +42,7 @@ while($row = mysql_fetch_array($result))
  echo"records found!"."<br/><br/>";
 
 ?> 
-<form enctype="multipart/form-data" method="post" action="ksu_select3em.html" >
+<form enctype="multipart/form-data" method="post" action="ksu_select3en.html" >
 <input type="submit" name="sub" value="Back"/>
 </form>
 ```
