--- a/資料結構/1213樹狀結構.md
+++ b/資料結構/1213樹狀結構.md
@@ -11,3 +11,20 @@ ceil 大於等於
 編號 i 的節點，在第 k 階，k= ceil( log2(i+1) ) ，其左子編號 L= 2i，其右子編號
 R= 2i + 1，其父編號 F=floor( i/2 )
 ```
+```
+二元樹每個節點取得順序:
+中序走訪法(inorder traversal)(LVR)
+前序走訪法(preorder traversal)(VLR)
+後序走訪法(postorder traversal)(LRV)
+L:左子節點；R: 左子節點；V:這個節點；
+```
+```
+中序走訪法(inorder traversal)(LVR): 先取出節點的左子節點, 再取出該節點, 之
+後再取出節點的右子節點
+
+前序走訪法(preorder traversal)(VLR): 先取出節點, 再取出該節點的左子節點, 之
+後再取出節點的右子節點
+
+後序走訪法(postorder traversal)(LRV): 先取出節點的左子節點, 再取出節點的右
+子節點, 之後再取出該節點
+```
