--- a/資料結構/1213樹狀結構.md
+++ b/資料結構/1213樹狀結構.md
@@ -16,7 +16,7 @@ R= 2i + 1，其父編號 F=floor( i/2 )
 中序走訪法(inorder traversal)(LVR)
 前序走訪法(preorder traversal)(VLR)
 後序走訪法(postorder traversal)(LRV)
-L:左子節點；R: 左子節點；V:這個節點；
+L:左子節點；R: 右子節點；V:這個節點；
 ```
 ```
 中序走訪法(inorder traversal)(LVR): 先取出節點的左子節點, 再取出該節點, 之
