--- a/資料結構/1213樹狀結構.md
+++ b/資料結構/1213樹狀結構.md
@@ -28,3 +28,8 @@ L:左子節點；R: 右子節點；V:這個節點；
 後序走訪法(postorder traversal)(LRV): 先取出節點的左子節點, 再取出節點的右
 子節點, 之後再取出該節點
 ```
+```
+二元搜尋樹 (Binary Search Tree)
+二元搜尋樹中的每一節點(node)均含有一鍵值(key value)，而且：在左子樹的所
+有鍵值均小於等於樹根的鍵值。右子樹的所有鍵值均大於樹根的鍵值。
+```
