--- a/資料結構/1213樹狀結構.md
+++ b/資料結構/1213樹狀結構.md
@@ -11,8 +11,8 @@ ceil 大於等於
 編號 i 的節點，在第 k 階，k= ceil( log2(i+1) ) ，其左子編號 L= 2i，其右子編號
 R= 2i + 1，其父編號 F=floor( i/2 )
 ```
+## 二元樹每個節點取得順序:
 ```
-二元樹每個節點取得順序:
 中序走訪法(inorder traversal)(LVR)
 前序走訪法(preorder traversal)(VLR)
 後序走訪法(postorder traversal)(LRV)
