--- a/資料結構/1213樹狀結構.md
+++ b/資料結構/1213樹狀結構.md
@@ -42,3 +42,186 @@ L:左子節點；R: 右子節點；V:這個節點；
 ```
 # 二元搜尋樹的實作說明
 ## 節點的宣告
+```
+struct TreeNode{ //宣告節點的名稱與結構
+struct TreeNode* pri=NULL; //指向父節點的位址
+struct TreeNode* right=NULL; //指向右子節點的位址
+struct TreeNode* left=NULL; //指向左子節點的位址
+int data; //節點的鍵值
+};
+static struct TreeNode* tree_header; //宣告靜態指標指向根節點的位址
+```
+## 建立節點
+```
+header = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+//配置記憶體空間給節點, 並將記憶體位址傳回給 header 指標
+header->data = value; //將值放入節點的鍵值欄位
+header->pri = NULL; //節點的父節點的位址設為空指標
+header->left = NULL; //節點的左子節點的位址設為空指標
+header->right = NULL; //節點的右子節點的位址設為空指標
+```
+## 加入節點
+```
+if(value <= current->data){ //資料小於等於節點的鍵值
+if(current->left == NULL){ //節點的左子節點指標是空指標
+current->left = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->left == NULL) return NULL;
+current->left->data=value; //建立節點
+current->left->left=NULL;
+current->left->right=NULL;
+current->left->pri=current;
+}
+else{ //節點的左子節點指標不是空指標
+AddNode(current->left, value); //加入節點
+}
+}
+else if(value > current->data){ //資料大於節點的鍵值
+if(current->right == NULL){ //節點的右子節點指標是空指標
+current->right = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->right == NULL) return NULL;
+current->right->data=value; //建立節點
+current->right->left=NULL;
+current->right->right=NULL;
+current->right->pri=current;
+}
+else{ //節點的右子節點指標不是空指標
+AddNode(current->right, value); //加入節點
+}
+}
+```
+```
+使用中序法顯示二元搜尋樹的所有節點
+if(current->left != NULL) //若節點的左子樹不是空指標
+current->left = ShowTree(current->left); //顯示左子樹
+printf("%d, ",current->data); //顯示節點的鍵值
+if(current->right != NULL) //若節點的右子樹不是空指標
+current->right = ShowTree(current->right); //顯示右子樹
+```
+## 二元搜尋樹的程式碼講解
+```
+//BT.h 定義程式會用到的所有副程式的型態
+struct TreeNode* CreateTree(struct TreeNode* header, int*);
+struct TreeNode* CreateNode(struct TreeNode*, int);
+struct TreeNode* AddNode(struct TreeNode*, int);
+struct TreeNode* ShowTree(struct TreeNode*);
+//BT.CPP
+#include "stdio.h"
+#include "stdlib.h"
+#include "time.h"
+#include "BT.h"
+struct TreeNode{ //宣告節點的名稱與結構
+struct TreeNode* pri=NULL; //指向父節點的位址預設為空指標
+struct TreeNode* right=NULL; //指向右子節點的位址預設為空指標
+struct TreeNode* left=NULL; //指向左子節點的位址預設為空指標
+int data; //節點的鍵值
+};
+static struct TreeNode* tree_header;
+//宣告靜態指標 tree_header 指向根節點的位址
+int main(){
+int m,s=0,x=0,data_num=0;
+int data[20]; //宣告有 20 欄位的整數型態陣列 data
+for(int i=0; i<20; i++){ //將 data 的 20 欄位都清為 0
+data[i]=0;
+}
+//隨機產生 20 個 0 到 99 的相異整數,並將其存入 data 的 20 欄位中
+for(int i=0;i<20 ;i++){
+int m=0;
+int n=1;
+while(n==1){
+n=0;
+srand((unsigned)time(NULL)); // 以時間序列當亂數種子
+m=rand()%100;
+for(int j=0;j<i;j++){
+if(m==data[j]) n=1;
+}
+}
+data[i]=m;
+}
+printf("輸入 20 筆隨機資料值\n");
+//顯示 data 的 20 欄位的值
+for(int i=0;i<20 ;i++){
+printf("%d, ", data[i]);
+}
+printf("\n"); 
+printf("開始建立二元搜尋樹\n");
+tree_header = CreateTree(tree_header, data); //建立二元搜尋樹
+printf("使用中序法取出二元搜尋樹\n");
+tree_header = ShowTree(tree_header); //使用中序法取出二元搜尋樹
+return 0;
+}
+struct TreeNode* CreateTree(struct TreeNode* header, int data[20]){
+header = CreateNode(header, data[0]);
+//建立二元搜尋樹的樹根並將第一筆資料存入樹根節點中
+if(header == NULL) return NULL;
+for(int i=1; i<20; i++){
+AddNode(header, data[i]);
+//依序將第 2 筆到第 20 筆資料加入二元搜尋樹中
+}
+return header;
+}
+struct TreeNode* CreateNode(struct TreeNode* header, int value){
+header = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+//配置記憶體空間給節點, 並將記憶體位址傳回給 header 指標
+if(header == NULL) return NULL; //若配置失敗 header 傳回空指標
+header->data = value; //將值放入節點的鍵值欄位
+header->pri = NULL; //節點的父節點的位址設為空指標
+header->left = NULL; //節點的左子節點的位址設為空指標
+header->right = NULL; //節點的右子節點的位址設為空指標
+return header;
+}
+struct TreeNode* AddNode(struct TreeNode* header, int value){
+struct TreeNode* current;
+current = header;
+if(value <= current->data){ //資料小於等於節點的鍵值
+if(current->left == NULL){ //節點的左子節點指標是空指標
+//建立節點並把資料放入節點中
+current->left = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->left == NULL) return NULL;
+current->left->data=value;
+current->left->left=NULL;
+current->left->right=NULL;
+current->left->pri=current;
+}
+else{ //節點的左子節點指標不是空指標
+AddNode(current->left, value); //加入節點
+}
+}
+else if(value > current->data){ //資料大於節點的鍵值
+if(current->right == NULL){ //節點的右子節點指標是空指標
+//建立節點並把資料放入節點中
+current->right = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->right == NULL) return NULL;
+current->right->data=value;
+current->right->left=NULL;
+current->right->right=NULL;
+current->right->pri=current;
+}
+else{ //節點的右子節點指標不是空指標
+AddNode(current->right, value); //加入節點
+}
+}
+return current;
+}
+struct TreeNode* ShowTree(struct TreeNode* header){
+struct TreeNode* current;
+current = header;
+if(current->left != NULL) //若節點的左子樹不是空指標
+current->left = ShowTree(current->left); //顯示左子樹
+printf("%d, ",current->data); //顯示節點的鍵值
+if(current->right != NULL) //若節點的右子樹不是空指標
+current->right = ShowTree(current->right); //顯示右子樹
+return current;
+}
+```
+## 二元搜尋樹的程式碼與執行結果
+```
+//執行結果
+輸入 20 筆隨機資料值
+90, 94, 97, 0, 4, 7, 10, 13, 17, 20, 23, 26, 30, 33, 36, 39, 43, 46, 49, 52,
+開始建立二元搜尋樹
+使用中序法取出二元搜尋樹
+0, 4, 7, 10, 13, 17, 20, 23, 26, 30, 33, 36, 39, 43, 46, 49, 52, 90, 94, 97,
+--------------------------------
+Process exited after 23.71 seconds with return value 0
+請按任意鍵繼續 . . .
+```
