--- a/sql資料庫實務/1214.md
+++ b/sql資料庫實務/1214.md
@@ -1,1 +1,66 @@
+# ksu_select4.php
+```
+<?php
+ $db_host = "localhost";
+ $db_name = "test";
+ $db_table = "ksu_std_table";
+ $db_user = "root";
+ $db_password = "";
+ // check connection
+ $conn = mysqli_connect($db_host, $db_user, $db_password);
+ if(empty($conn)){
+	print  mysqli_error ($conn);
+    die ("Unable to connect to DB！" );
+	exit;
+ }  
+ if(!mysqli_select_db( $conn, $db_name)){
+	die("DB is not existed");
+	exit;
+ }  
+ //main scope  
+mysqli_set_charset($conn,'utf8');
 
+echo "ksu_std_table : the number of students as follows"."<br/><br/>";
+$result = mysqli_query($conn,
+	"SELECT ksu_std_department,count(1) FROM ksu_std_table group by  ksu_std_department");
+     
+ echo "<table border='1'>
+ <tr>
+   <th> Department </th>  <th> the number of students </th>   
+ </tr>";
+$row_num=0;
+while($row = mysqli_fetch_array($result))
+{
+	echo"<tr>";
+	echo"<td>" . $row['ksu_std_department'] . "</td>";
+	echo"<td>" . $row['count(1)'] . "</td>";
+	echo"</tr>";
+	$row_num = $row_num+1;
+}
+echo"</table>";
+echo $row_num .  "  records found ! " . "<br/><br/>";
+?> 
+<form enctype="multipart/form-data"  method = "post" action="ksu_select4.html">
+<input type="submit" name="sub" value="Back"/>
+</form>
+```
+# ksu_select4.html
+```
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Select exercise</title>
+</head>
+<body>
+  <h3> ksu select operation </h3>
+  <!--不對字符編碼 -->    
+  <form enctype="multipart/form-data" method="post" action="ksu_select4.php" >
+	Query ksu_std_table for the number of students from every department
+	<br/>
+    <br/>
+    <input type="submit" name="sub" val="Query"/>
+  </form>
+</body>
+</html>
+```
