--- a/sql資料庫實務/1214.md
+++ b/sql資料庫實務/1214.md
@@ -64,7 +64,7 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 </body>
 </html>
 ```
-# backgroung color
+# background color
 ```
 <?php
  $db_host = "localhost";
