--- a/Linux/1215正規表示法.md
+++ b/Linux/1215正規表示法.md
@@ -1,9 +1,90 @@
 # 什麼是正規表示法
 ```
+>簡單說明:正規表示法 或 常規表示法
+        Regular Expression 或 regexp
+>用途:
+-正規表示法就是處理字串的方法；
+-以行為單位， 來進行字串的處理行為；
+-他透過一些特殊符號的輔助；
+-可以讓使用者輕易的達到 搜尋/取代 某特定字串的處理程序！
+
+>分類:
+-基本型General Regexp
+-延伸型Extended Regexp
+-記得語系資料LANG=en LANG=C
+
+>支援程式項目:
+-vi、vim、gvim
+-sed
+-grep、egrep、fgrep
+-垃圾信件分析、登錄檔分析、重要訊息擷取等。
+-只有支援正規表示法的軟體才能用 RE 字符表示。
 ```
 # 基礎型正規表示法
 ```
-grep[-acivn]'搜尋字串'
+>字串擷取指令：grep[-acivn]'搜尋字串'filename
+●-a ：將 binary 檔案以 text 檔案的方式搜尋資料
+●-c ：計算找到 '搜尋字串' 的次數
+●-i ：忽略大小寫的不同，所以大小寫視為相同
+●-n ：順便輸出行號
+●-v ：反向選擇，亦即顯示出沒有 ‘搜尋字串’ 內容的那一行！
+
+>基本型項目
+●.	表示任一單一字元(一定有一個字元，但不包含換行符號)
+●[] 表示清單內任一單一字元
+●使用 – 表示範圍 ex [a-z]
+●使用 ^ 表示排除 ex [^A-Z]
+●^	表示為首字元
+●$	表示為尾字元
+●\	表示讓後面字元失去原特殊意義成為一般字元
+●*	表示前面指定樣式可以出現 0 次至多次
+●\{n,m\}	連續 n 到 m 個的『前一個 RE 字符』
+
+>範例:
+-先下載：wget 
+http://linux.vbird.org/linux_basic/0330regularex/regular_express.txt
+-找出上個檔案中，有 “the” 字樣的那一行，並輸出行號；
+grep -n ‘the’ regular_express.txt
+-呈上題，若忽略大小寫的話？
+grep -in ‘the’ regular_express.txt
+-找出 test 或 taste 這兩個字串所在行？
+grep -n ‘t[ae]st’ regular_express.txt
+-找出含有 oo 的那一行？
+grep -n ‘oo’ regular_express.txt
+-呈上題，但 oo 之前不能是 g 的話？
+	grep -n ‘[^g]oo’ regular_express.txt
+-呈上，若 oo 前面不能是小寫字元？
+grep -n '[^a-z]oo' regular_express.txt
+-呈上，取出有數字的該行？
+grep -n '[0-9]' regular_express.txt
+-若以 the 為開頭的那一行？
+grep -n '^the' regular_express.txt
+-若以小寫字元為開頭？
+grep -n '^[a-z]' regular_express.txt
+-開頭並不是英文字元？
+grep -n '^[^A-Za-z]' regular_express.txt
+-該行結尾含有小數點？
+grep -n ‘\.$’ regular_express.txt
+-取出空白行？
+grep -n ‘^$’ regular_express.txt
+-請取出 /etc/man.config 內不以 # 開頭，及去除空白行？
+grep -v ‘^#’ /etc/man.config | grep -v ‘^$’
+-找出 g？？d  ，亦即共含有四位字元的那一行？
+grep -n ‘g..d’ regular_express.txt
+-含有連續兩個以上的 o 的那一行？
+grep -n ‘ooo*’ regular_express.txt
+-含有不一定連續的兩個 g 的那一行？
+grep -n ‘g.*g’ regular_express.txt
+-含有 2~5 個 o 的那一行？
+grep -n ‘o\{2,5\}’ regular_express.txt
+-找出在 /bin 底下，不以 a 到 j 為開頭的檔名？
+ls -l /bin/[!a-j]*
+ls -l `find /bin -type f` | grep '/bin/[^a-j]' |more
+-我想要找出 /etc/ 底下的所有檔案中，含有＊的那個檔案
+grep '\*' /etc/*
 ```
 # 延伸行正規表示法
-
+# 格式化列印(printf)
+# sed
+# awk
+# 相關應用
