--- a/Linux/1215正規表示法.md
+++ b/Linux/1215正規表示法.md
@@ -52,7 +52,7 @@ grep -n ‘t[ae]st’ regular_express.txt
 -找出含有 oo 的那一行？
 grep -n ‘oo’ regular_express.txt
 -呈上題，但 oo 之前不能是 g 的話？
-	grep -n ‘[^g]oo’ regular_express.txt
+grep -n ‘[^g]oo’ regular_express.txt
 -呈上，若 oo 前面不能是小寫字元？
 grep -n '[^a-z]oo' regular_express.txt
 -呈上，取出有數字的該行？
@@ -84,7 +84,106 @@ ls -l `find /bin -type f` | grep '/bin/[^a-j]' |more
 grep '\*' /etc/*
 ```
 # 延伸行正規表示法
+```
+>延伸型項目：
++ 表示前面指定樣式至少出現 1 次以上
+? 表示前面指定樣式出現 0 次或是 1 次
+( ) 表示集合
+A|B 表示 A 或者是 B
+{n} 表示前面指定樣式只出現 n 次
+{n,} 表示前面指定樣式至少出現 n 次
+{n,m} 表示前面指定樣式至少出現 n 次，但是不超過 m 次
+
+>需要使用 egrep 或 grep -E 來執行
+
+>練習：
+-找出 MAN 或 MAP 在 /etc/man.config 中
+egrep ‘MA(N|P)’ /etc/manpath.config
+-找出四位數以上在 /usr/share/doc/cpus*/*裡面的檔案
+egrep ‘[0-9]{4,}’ /usr/share/doc/cups-/*
+-找出至少出現兩個 M 以上的行在 /etc/man.config 當中
+egrep “MM+” /etc/man.config
+
+```
 # 格式化列印(printf)
 # sed
+```
+>sed [-nefr] [動作]
+●-n
+使用(silent)模式。在一般 sed 的用法中，所有來自 STDIN 的資料一般都會被列出到螢幕上。但如果加上 -n 參數後，則只有經過 sed 特殊處理的那一行(或者動作)才會被列出來。
+●-e
+直接在指令列模式上進行 sed 的動作編輯；
+●-f
+直接將 sed 的動作寫在一個檔案內， -f filename 則可以執行 filename 內的 sed 動作；
+●-r
+sed 的動作支援的是延伸型正規表示法的語法。(預設是基礎正規表示法語法)
+
+>sed [-nefr] [n1[,n2]]function
+●a
+新增， a 的後面可以接字串，而這些字串會在新的一行出現(下一行)
+●c
+取代， c 的後面可以接字串，這些字串可以取代 n1,n2 之間的行！
+●d
+刪除，因為是刪除啊，所以 d 後面通常不接任何咚咚；
+●i 
+插入， i 的後面可以接字串，而這些字串會在新的一行出現(上一行)；
+●p
+列印，亦即將某個選擇的資料印出。通常 p 會與參數 sed -n 一起運作～
+●s
+搜尋，不但可以搜尋，還能夠進行取代的工作哩！通常這個 s 的動作可以搭配正規表示法！例如 1,20s/old/new/g 就是啦！
+
+>範例:
+-將 /etc/passwd 的內容列出，需要列印行號，且將第 2~5 行刪除
+nl /etc/passwd | sed '2,5d'
+-呈上題，在第二行後(亦即是加在第三行)加上『drink tea?』
+nl /etc/passwd | sed '2a drink tea'
+-在第二行後面加入兩行字，例如『Drink tea or .....』『drink beer?』
+nl /etc/passwd | sed '2a Drink tea or ......\
+> drink beer ?'
+-我想將第2-5行的內容取代成為『No 2-5 number』呢？
+nl /etc/passwd | sed '2,5c No 2-5 number'
+-僅列出第 5-7 行
+nl /etc/passwd | sed -n '5,7p'
+-我們可以使用 ifconfig 來列出 IP ，若僅要 eth0 的 IP 時？
+ifconfig eth0 | grep 'inet ' | sed 's/^.*addr://g' |  sed 's/Bcast.*$//g'
+```
 # awk
+```
+>指令下達:
+awk '條件類型1{動作1} 條件類型2{動作2} ...' filename
+
+>基礎應用：
+將 last 輸出的資訊中，第 1, 3 欄位輸出？
+last | awk '{print $1 "\t" $3}'
+
+>awk 的處理流程
+讀入第一行，並將第一行的資料填入 $0, $1, $2.... 等變數當中；
+依據 "條件類型" 的限制，判斷是否需要進行後面的 "動作"；
+做完所有的動作與條件類型；
+若還有後續的『行』的資料，則重複上面 1~3 的步驟，直到所有的資料都讀完為止。
+
+>awk 的內建變數
+NF	每一行 ($0) 擁有的欄位總數
+NR	目前 awk 所處理的是『第幾行』資料
+FS	目前的分隔字元，預設是空白鍵
+
+>簡單範例:
+列出 last 內每一行的帳號，並且列出目前處理的行數， 並且說明，該行有多少欄位
+last | awk '{print $1 "\t lines: " NR "\t columes: " NF}'
+```
 # 相關應用
+```
+>新舊檔案的製作：
+-將 /etc/passwd 複製到 /tmp/old 裡面去
+mkdir /tmp/old
+cp -a /etc/passwd /tmp/old
+-將 /etc/passwd 內容中，第 10 行加入一行，內容為 "testing:x:350:350" ，且將內容儲存到 /tmp/new/passwd 中。
+mkdir /tmp/new
+sed '10a testing:x:350:350' /etc/passwd  >> /tmp/new/passwd
+
+>diff 檔案比對：
+diff /etc/passwd /tmp/test/passwd
+>cmp 字元比對(僅列出第一個差異點)
+cmp /etc/passwd /tmp/test/passwd
+>pr 列印準備！ (pr /etc/passwd)
+```
