--- a/資料結構/1220快速排序.md
+++ b/資料結構/1220快速排序.md
@@ -1,1 +1,297 @@
-
+# 二元搜尋樹的程式碼講解(二)
+```
+//BST.h 定義程式會用到的所有副程式的型態
+int Search(int*, int*);
+struct TreeNode* CreateTree(struct TreeNode* , int*);
+struct TreeNode* CreateNode(struct TreeNode*, int);
+struct TreeNode* AddNode(struct TreeNode*, int);
+struct TreeNode* ShowTree(struct TreeNode*);
+int SearchNode(struct TreeNode*, int, int);
+struct TreeNode* SearchTree(struct TreeNode*, int*);
+```
+```
+//BST.CPP
+#include "stdio.h"
+#include "stdlib.h"
+#include "time.h"
+#include "BST.h"
+struct TreeNode{ //宣告節點的名稱與結構
+struct TreeNode* pri=NULL; //指向父節點的位址預設為空指標
+struct TreeNode* right=NULL; //指向右子節點的位址預設為空指標
+struct TreeNode* left=NULL; //指向左子節點的位址預設為空指標
+int data; //節點的鍵值
+};
+static struct TreeNode* tree_header;
+//宣告靜態指標 tree_header 指向根節點的位址
+int main(){
+int m,s=0,x=0,data_num=0;
+int data1[60]; //宣告有 60 欄位的整數型態陣列 data1
+int data2[10]; //宣告有 10 欄位的整數型態陣列 data2
+for(int i=0; i<60; i++){ //將 data1 的 60 欄位都清為 0
+data1[i]=0;
+}
+for(int i=0; i<10; i++){ //將 data2 的 10 欄位都清為 0
+data2[i]=0;
+}
+//隨機產生 60 個 0 到 99 的相異整數,並將其存入 data1 的 60 欄位中
+for(int i=0;i<60 ;i++){
+int m=0, n=1;
+while(n==1){
+n=0;
+srand((unsigned)time(NULL));
+m = (rand()*(rand()%10))%100;
+// 以時間序列當亂數種子 取 0-99 的亂數
+for(int j=0;j<i;j++){
+if(m==data1[j]) n=1;
+}
+}
+data1[i]=m;
+}
+//隨機產生 10 個 0 到 99 的相異整數,並將其存入 data2 的 10 欄位中
+for(int i=0;i<10 ;i++){
+int m=0;
+int n=1;
+while(n==1){
+n=0;
+srand((unsigned)time(NULL)); // 以時間序列當亂數種子
+m=rand()%100;
+for(int j=0;j<i;j++){
+if(m==data2[j]) n=1;
+}
+}
+data2[i]=m;
+}
+//顯示 data1 的 60 欄位的值
+printf("有 60 筆資料值\n");
+for(int i=0;i<60 ;i++){
+printf("%d, ", data1[i]);
+}
+printf("\n\n\n");
+printf("找出下列 10 筆資料是否在上面 60 筆資料中\n");
+//顯示 data2 的 10 欄位的值
+for(int i=0;i<10 ;i++){
+printf("%d, ", data2[i]);
+}
+printf("\n\n\n");
+printf("使用暴力法尋找(一筆一筆找):\n");
+int total = Search(data1, data2); //使用暴力法尋找
+printf("\n");
+total = total/10;
+printf("平均找了 %d 次\n", total);
+printf("\n\n\n");
+printf("使用二元搜尋樹尋找\n");
+tree_header = CreateTree(tree_header, data1); //建立二元搜尋樹
+SearchTree(tree_header, data2); //使用二元搜尋樹尋找
+return 0;
+}
+//使用暴力法尋找, 即從 data1 第一筆資料開始一筆一筆資料的尋找
+int Search(int data1[60], int data2[10]){
+int total, index, p;
+total = 0;
+for(int i =0; i<10; i++){
+index = 0;
+p = 0;
+for(int j = 0; j<60; j++){
+index++;
+if(data2[i]==data1[j]){
+printf(" %d 找到了!!共找了 %d 次\n", data2[i], index);
+p = 1;
+break;
+}
+}
+total = total + index;
+if(p==0) printf(" %d 沒找到!!共找了 %d 次\n", data2[i], index);
+}
+return total;
+}
+```
+## 建立二元搜尋樹
+```
+struct TreeNode* CreateTree(struct TreeNode* header, int data[60]){
+header = CreateNode(header, data[0]);
+//建立二元搜尋樹的樹根並將第一筆資料存入樹根節點中
+if(header == NULL) return NULL;
+for(int i=1; i<60; i++){
+AddNode(header, data[i]);
+//依序將第 2 筆到第 60 筆資料加入二元搜尋樹中
+}
+return header;
+}
+```
+## 建立建立二元搜尋樹的樹根
+```
+struct TreeNode* CreateNode(struct TreeNode* header, int value){
+header = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+//配置記憶體空間給節點, 並將記憶體位址傳回給 header 指標
+if(header == NULL) return NULL; //若配置失敗 header 傳回空指標
+header->data = value; //將值放入節點的鍵值欄位
+header->pri = NULL; //節點的父節點的位址設為空指標
+header->left = NULL; //節點的左子節點的位址設為空指標
+header->right = NULL; //節點的右子節點的位址設為空指標
+return header;
+}
+```
+```
+//BST.CPP
+#include "stdio.h"
+#include "stdlib.h"
+#include "time.h"
+#include "BST.h"
+struct TreeNode{
+struct TreeNode* pri=NULL;
+struct TreeNode* right=NULL;
+struct TreeNode* left=NULL;
+int data;
+};
+static struct TreeNode* tree_header;
+int main(){
+int m,s=0,x=0,data_num=0;
+int data1[60];
+int data2[10];
+for(int i=0; i<60; i++){
+data1[i]=0;
+}
+for(int i=0; i<10; i++){
+data2[i]=0;
+}
+for(int i=0;i<60 ;i++){
+int m=0, n=1;
+while(n==1){
+n=0;
+srand((unsigned)time(NULL));
+m = (rand()*(rand()%10))%100;
+// 以時間序列當亂數種子 取 0-99 的亂數
+for(int j=0;j<i;j++){
+if(m==data1[j]) n=1;
+}
+}
+data1[i]=m;
+}
+for(int i=0;i<10 ;i++){
+int m=0;
+int n=1;
+while(n==1){
+n=0;
+srand((unsigned)time(NULL)); // 以時間序列當亂數種子
+m=rand()%100;
+for(int j=0;j<i;j++){
+if(m==data2[j]) n=1;
+}
+}
+data2[i]=m;
+}
+printf("有 60 筆資料值\n");
+for(int i=0;i<60 ;i++){
+printf("%d, ", data1[i]);
+}
+printf("\n\n\n");
+printf("找出下列 10 筆資料是否在上面 60 筆資料中\n");
+for(int i=0;i<10 ;i++){
+printf("%d, ", data2[i]);
+}
+printf("\n\n\n");
+printf("使用暴力法尋找(一筆一筆找):\n");
+int total = Search(data1, data2);
+printf("\n");
+total = total/10;
+printf("平均找了 %d 次\n", total);
+printf("\n\n\n");
+printf("使用二元搜尋樹尋找\n");
+tree_header = CreateTree(tree_header, data1);
+SearchTree(tree_header, data2);
+return 0;
+}
+int Search(int data1[60], int data2[10]){
+int total, index, p;
+total = 0;
+for(int i =0; i<10; i++){
+index = 0;
+p = 0;
+for(int j = 0; j<60; j++){
+index++;
+if(data2[i]==data1[j]){
+printf(" %d 找到了!!共找了 %d 次\n", data2[i], index);
+p = 1;
+break;
+}
+}
+total = total + index;
+if(p==0) printf(" %d 沒找到!!共找了 %d 次\n", data2[i], index);
+}
+return total;
+}
+struct TreeNode* CreateTree(struct TreeNode* header, int data[60]){
+header = CreateNode(header, data[0]);
+if(header == NULL) return NULL;
+for(int i=1; i<60; i++){
+AddNode(header, data[i]);
+}
+return header;
+}
+struct TreeNode* CreateNode(struct TreeNode* header, int value){
+header = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(header == NULL) return NULL;
+header->data = value;
+header->pri = NULL;
+header->left = NULL;
+header->right = NULL;
+return header;
+}
+struct TreeNode* AddNode(struct TreeNode* header, int value){
+struct TreeNode* current;
+current = header;
+if(value <= current->data){
+if(current->left == NULL){
+current->left = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->left == NULL) return NULL;
+current->left->data=value;
+current->left->left=NULL;
+current->left->right=NULL;
+current->left->pri=current;
+}
+else{
+AddNode(current->left, value);
+}
+}
+else if(value > current->data){
+if(current->right == NULL){
+current->right = (struct TreeNode *)malloc(sizeof(struct TreeNode));
+if(current->right == NULL) return NULL;
+current->right->data=value;
+current->right->left=NULL;
+current->right->right=NULL;
+current->right->pri=current;
+}
+else{
+AddNode(current->right, value);
+}
+}
+return current;
+}
+struct TreeNode* SearchTree(struct TreeNode* tree_header, int data2[10]){
+int index=0;
+for (int i = 0; i <10; i++){
+index = index + SearchNode(tree_header, data2[i], 0);
+}
+}
+int SearchNode(struct TreeNode* tree_header, int value, int index){
+if (tree_header == NULL){
+index++;
+printf(" %d 沒找到!!共找了 %d 次\n", value, index);
+return index;
+}
+else if (tree_header->data == value){
+index++;
+printf(" %d 找到了!!共找了 %d 次\n", value, index);
+return index;
+}
+else if (tree_header->data > value){
+index++;
+return SearchNode(tree_header->left, value, index);
+}
+else if (tree_header->data < value){
+index++;
+return SearchNode(tree_header->right, value, index);
+}
+}
+```
