--- a/資料結構/1220程式碼.md
+++ b/資料結構/1220程式碼.md
@@ -296,3 +296,21 @@ return SearchNode(tree_header->right, value, index);
 }
 }
 ```
+# 快速排序法 (Quick Sort)
+```
+將一個數列的數從小到大做排列的方法
+```
+### 優點:
+```
+演算法複雜度低(n log2 𝑛), 能快速完成排列
+方法:
+1. 確定數列中最後一個數在排序的位置
+2. 將位置之前的數以及位置之後的數再做快速排序
+3. 直到沒有數為止
+```
+### 說明:
+```
+確定數列中最後一個數在排序的位置
+以最後一個數為基準數, 在數列中比基準數大的數搬到基準數的後面, 在數列中
+比基準數小的數搬到基準數的前面
+```
