--- a/sql資料庫實務/1221.md
+++ b/sql資料庫實務/1221.md
@@ -51,3 +51,7 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 </form>
 
 ```
+```
+if (($row['ksu_std_department']=="")){
+		$empty_num=$empty_num+1;
+	}
