--- a/sql資料庫實務/1221.md
+++ b/sql資料庫實務/1221.md
@@ -52,6 +52,6 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 
 ```
 ```
-if (($row['ksu_std_department']=="")){
+if ($row['ksu_std_department']==""){
 		$empty_num=$empty_num+1;
 	}
