--- a/sql資料庫實務/1221.md
+++ b/sql資料庫實務/1221.md
@@ -108,3 +108,6 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 <input type="submit" name="sub" value="Back"/>
 </form>
 ```
+```
+having ksu_std_department != ''
+```
